--- a/core-blocks/latest-comments/style.scss
+++ b/core-blocks/latest-comments/style.scss
@@ -8,6 +8,23 @@
 	padding: 0 2px;
 }
 
+.wp-block-latest-comments.has-avatars > li {
+	min-height: 48px;
+}
+.wp-block-latest-comments > li {
+	margin-bottom: 1em;
+}
+
+.wp-block-latest-comments__comment-timestamp {
+	display: block;
+}
+
+.wp-block-latest-comments .avatar,
 .wp-block-latest-comments__comment-avatar {
-	margin-right: 3px;
+	display: block;
+	float: left;
+	height: 48px;
+	width: 48px;
+	border-radius: 24px;
+	margin-right: 5px;
 }
